From server, it sends hash object instead of string

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <script>
     window.onload = function() {
       socket = new WebSocket("ws://127.0.0.1:8081");
-
 	    socket.onmessage = function(event) {
-        //document.getElementById('twitter').innerHTML = event.data;
-        text = "<li>" + event.data + "</li>"
+        tweet = JSON.parse(event.data);
+        text = "<li>" + tweet.text + "</li>";
         $('.twitter').prepend(text);
-        console.log(text);
+        console.log(tweet.date);
+        console.log(tweet.user);
 	    }
     }
     </script>
