--- a/index.html
+++ b/index.html
@@ -3,72 +3,22 @@
 
 <head>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="./twitter.js"></script>
+  <script src="./ticker.js"></script>
   <link rel="stylesheet" type="text/css" href="twitter.css">
   <title>News from Twitter</title>
-  <style>
-    html,
-    body {
-      height: 80%;
-      width: 80%;
-    }
-  </style>
 </head>
 
 <body>
   <h1>Twitter: </h1>
   <ul>
     <div class="twitter"></div>
-    <div class="footer"></div>
   </ul>
+  <div class="footer">
+    <div class="ticker" rel="slide">
+    </div>
+  </div>
 
-  <script>
-    var breaking = /^.Breaking.*/i;
-    var justin = /^Just in.*/i;
-    var sokuho = /^‘¬•ñ.*/i;
-    window.onload = function () {
-      socket = new WebSocket("ws://127.0.0.1:8081");
-      socket.onmessage = function (event) {
-        tweet = JSON.parse(event.data);
-
-        // image
-        if (tweet.image !== undefined) {
-          $('.twitter').prepend('<div id="attached_image"><img /></div>');
-
-          var image_url = tweet.image;
-          var imgPreloader = new Image();
-          imgPreloader.onload = function () {
-            $('#attached_image').children('img').attr({ 'src': image_url, 'height': 256 });
-          }
-          imgPreloader.src = image_url;
-        }
-
-        // Tweet
-        if (breaking.test(tweet.text) || justin.test(tweet.text) || sokuho.test(tweet.text)) {
-          console.log(tweet.text);
-          $('.twitter').prepend('<p id="breaking_text">' + tweet.text + '</p>');
-        }
-        else {
-          $('.twitter').prepend('<p id="text">' + tweet.text + '</p>');
-        }
-
-        // Screen name
-        unixtime = Date.parse(tweet.date);
-        var date = new Date(unixtime);
-        localDate = date.toLocaleDateString();
-        localtime = date.toLocaleTimeString();
-        $('.twitter').prepend('<p id="user">' + localDate + " " + localtime + " @" + tweet.user + '</p>');
-
-        // Profile image
-        $('.twitter').prepend('<div id="profile"><img /></div>');
-        var imgPreloader = new Image();
-        imgPreloader.onload = function () {
-          console.log(tweet.profile);
-        }
-        imgPreloader.src = tweet.profile;
-        $('#profile').children('img').attr({ 'src': tweet.profile, 'height': 50, 'align': 'left' });
-      }
-    }
-  </script>
 </body>
 
 </html>
