--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
   <h1>Twitter: </h1>
-  <ul>
-    <div class="twitter"></div>
-  </ul>
+  <div class="twitter"></div>
+
   <div class="footer">
-    <div class="ticker" rel="slide">
-    </div>
+    <ul>
+      <div class="ticker" rel="slide"> </div>
+    </ul>
   </div>
 
 </body>
