Add horizontal pane resize

--- a/panel.html
+++ b/panel.html
@@ -20,6 +20,20 @@
             Right
         </div>
     </div>
+
+    <div class="panel-container-vertical">
+
+        <div class="panel-top">
+            top panel
+        </div>
+
+        <div class="splitter-horizontal">
+        </div>
+
+        <div class="panel-bottom">
+            bottom panel
+        </div>
+    </div>
     <script src="resize.js"></script>
 
 </body>
