--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+  <script src="jquery-resizable.js"></script>
   <script src="./twitter.js"></script>
   <link rel="stylesheet" type="text/css" href="twitter.css">
   <title>News from Twitter</title>
@@ -10,12 +11,17 @@
 
 <body>
   <h1>Twitter: </h1>
-  <div class="twitter"></div>
 
-  <div class="footer">
-    <ul>
-      <div class="ticker" rel="slide"> </div>
-    </ul>
+  <div class="panel-container-vertical">
+    <div class="twitter"></div>
+
+    <div class="splitter-horizontal"></div>
+
+    <div class="footer">
+      <ul>
+        <div class="ticker" rel="slide"> </div>
+      </ul>
+    </div>
   </div>
 
 </body>
