--- a/panel.html
+++ b/panel.html
@@ -3,9 +3,9 @@
 
 <head>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="jquery-resizable.js"></script>
+    <script src="js/jquery-resizable.js"></script>
     <title>Hello world!</title>
-    <link rel="stylesheet" type="text/css" href="resize.css">
+    <link rel="stylesheet" type="text/css" href="css/resize.css">
 </head>
 
 <body>
@@ -34,7 +34,7 @@
             bottom panel
         </div>
     </div>
-    <script src="resize.js"></script>
+    <script src="js/resize.js"></script>
 
 </body>
 
