--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
-  <script src="jquery-resizable.js"></script>
-  <script src="./twitter.js"></script>
-  <link rel="stylesheet" type="text/css" href="twitter.css">
+  <script src="js/jquery-resizable.js"></script>
+  <script src="js/twitter.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/twitter.css">
   <title>News from Twitter</title>
 </head>
 
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <script src="resize.js"></script>
+  <script src="js/resize.js"></script>
 </body>
 
 </html>
