--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 
     <div class="footer">
       <ul>
-        <div class="ticker" rel="slide"> </div>
+        <div class="ticker" rel="slide">
+        </div>
       </ul>
     </div>
   </div>
