Add hashtag and url link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="js/jquery-resizable.js"></script>
   <script src="js/twitter.js"></script>
+  <script src="js/util.js"></script>
   <link rel="stylesheet" type="text/css" href="css/twitter.css">
   <title>News from Twitter</title>
 </head>
